src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Copy_Loan__c</fullName>
        <label>Book Copy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Book_Copy__c.Available__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Book_Copy__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loan_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Loan Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <defaultValue>TODAY() + 3</defaultValue>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Returned__c</fullName>
        <label>Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Student</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Copy_Loan__c</columns>
        <columns>Return_Date__c</columns>
        <columns>Returned__c</columns>
        <columns>Student__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L{0000}</displayFormat>
        <label>Loan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_validation</fullName>
        <active>true</active>
        <description>Checks that the Loan Date is minor than Return Date</description>
        <errorConditionFormula>Loan_Date__c &gt; Return_Date__c</errorConditionFormula>
        <errorDisplayField>Return_Date__c</errorDisplayField>
        <errorMessage>The Return Date must be grater than Loan Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>onlyOneCopy</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW() , Copy_Loan__r.availableAux__c = false,  Copy_Loan__r.Available__c = false)</errorConditionFormula>
        <errorDisplayField>Copy_Loan__c</errorDisplayField>
        <errorMessage>The copy already has an active loan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>studentoNotNull</fullName>
        <active>true</active>
        <errorConditionFormula>Student__c = null</errorConditionFormula>
        <errorDisplayField>Student__c</errorDisplayField>
        <errorMessage>The student field can not be null</errorMessage>
    </validationRules>
</CustomObject>